--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -6191,7 +6191,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 				background-color: @color0;
 				margin-top: 3em;
 				color: @color2;
-				margin-bottom: 3em;
+				margin-bottom: 2em;
 				clear: both;
 				height: auto;
 				display: block;
@@ -6203,6 +6203,12 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 					display: block;
 				}
 			}
+
+			.text-advice{
+				text-align: center;
+				padding-bottom: 2em;
+			}
+
 		}
 
 		table.mceLayout{
