--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1446,6 +1446,10 @@ aside.col-md-3 .region.region-sidebar-first.well .block-menu-block.left-menu h2.
 .left-menu ul li:hover a {
   color: white;
 }
+.left-menu ul li:hover ul li:hover a {
+  color: white;
+  background-color: #0030a0;
+}
 .left-menu ul .active {
   background-color: #0030a0;
   position: relative;
@@ -1517,6 +1521,13 @@ aside.col-md-3 .region.region-sidebar-first.well .block-menu-block.left-menu h2.
   position: absolute;
   right: 14px;
   top: 10px;
+}
+.left-menu ul li.expanded.active a.active-trail:hover {
+  background: #0030a0;
+  color: #FFF;
+}
+.left-menu ul li.expanded.active a.active-trail:hover:before {
+  color: #FFF;
 }
 .left-menu ul li.active ul li a:before {
   content: none;
@@ -2406,6 +2417,7 @@ span.pages {
   width: 100%;
   text-decoration: none;
   border-bottom: 0;
+  position: relative;
 }
 .container .content-box-sub a:hover {
   opacity: 0.8;
@@ -6770,6 +6782,55 @@ body.page-tools-and-publications-practical-tools .view-practical-tools .view-con
 }
 body.page-tools-and-publications-practical-tools .view-practical-tools .view-content .views-row .views-field-body {
   padding-top: 15px;
+}
+/* Practical tools detail */
+.node-type-practical-tool .field-name-field-type-of-item,
+.node-type-practical-tool .field-name-field-material-country,
+.node-type-practical-tool .field-name-field-available-in-languages,
+.node-type-practical-tool .field-collection-container {
+  float: left;
+  margin: 1em 3em 1em 0;
+}
+.node-type-practical-tool .field-name-field-type-of-item .field-label,
+.node-type-practical-tool .field-name-field-material-country .field-label,
+.node-type-practical-tool .field-name-field-available-in-languages .field-label,
+.node-type-practical-tool .field-collection-container .field-label {
+  color: #003399;
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  border: 1px solid #c1e000;
+  border-radius: 5px;
+  padding: 2px 10px;
+  margin-right: 8px;
+}
+.node-type-practical-tool .field-name-field-type-of-item .field-items .field-item,
+.node-type-practical-tool .field-name-field-material-country .field-items .field-item,
+.node-type-practical-tool .field-name-field-available-in-languages .field-items .field-item,
+.node-type-practical-tool .field-collection-container .field-items .field-item {
+  float: left;
+  padding-right: 5px;
+}
+.node-type-practical-tool .field-name-body,
+.node-type-practical-tool .field-name-field-body-original {
+  padding-bottom: 1.5em;
+}
+.node-type-practical-tool .field-name-body .field-label,
+.node-type-practical-tool .field-name-field-body-original .field-label {
+  width: 100%;
+}
+.node-type-practical-tool .field-name-field-external-url .field-label {
+  width: 100%;
+}
+.node-type-practical-tool h3 {
+  font-size: 2rem;
+  color: #003399;
+}
+.node-type-practical-tool .group-details .field-label {
+  width: 320px;
+  padding-right: 1em;
+}
+.node-type-practical-tool .group-details .date-display-single {
+  font-weight: normal;
 }
 /* Glossary */
 .page-about-topic-glossary-list #glossary-letters {
