--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -20298,6 +20298,9 @@ blockquote.image-field-caption {
   padding: 0;
   margin: 0;
   width: 100%;
+  font-size: 10px;
+  position: absolute;
+  top: -5px;
 }
 blockquote.image-field-caption p {
   z-index: 999;
@@ -20333,11 +20336,6 @@ body.front .homepage-slider blockquote.image-field-caption p {
 }
 .field.field-name-field-image {
   position: relative;
-}
-.node-type-article blockquote.image-field-caption {
-  position: absolute;
-  width: 100%;
-  top: 335px;
 }
 .node-type-article blockquote.image-field-caption p {
   background: transparent;
