--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -11340,6 +11340,9 @@ blockquote.image-field-caption {
     padding: 0;
     margin: 0;
     width: 100%;
+    font-size: 10px;
+    position: absolute;
+    top: -5px;
     p{
 	  	z-index: 999;
 	    position: relative;
@@ -11382,9 +11385,6 @@ body.front .homepage-slider blockquote.image-field-caption p{
 }
 
 .node-type-article blockquote.image-field-caption {
-    position: absolute;
-    width: 100%;
-    top: 335px;
     p{
    		background: transparent;
     	right: 1%;
