--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1698,6 +1698,13 @@ aside.col-md-3{
 		    top: 10px;
    			right: 13px;
     	}
+    	&:hover{
+    		background: #003399;
+    		color: #FFFFFF;
+    		&:before{
+				color: #FFFFFF;
+    		}
+    	}
   	}
   	a.active{
   		background: #daea96;
@@ -3361,12 +3368,12 @@ div.workbench-info-block{
 	ul.menu{
 		> li.expanded{
 			ul.menu{
-				display: none
+				display: none;
 			}
 		}
 		> li.expanded.active{
 			ul.menu{
-				display: block
+				display: block;
 			}
 		}
 	}
