--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7696,12 +7696,17 @@ body.page-tools-and-publications-publications{
 
 			ul{
 				list-style: none;
-				padding: 0 1em 1em 1em;
+				padding: 0 1em;
+				margin-bottom: 0;
 				text-align: center;
 				li{
 					padding-top: 1em;
 					padding-bottom: 1em;
 					background: url(../images/green-line.png) repeat-x;
+					.more-link{
+						font-size: 1.2rem;
+				    	padding-top: 5px;
+				    }
 				}
 			}
 			.more-link{
@@ -7713,6 +7718,7 @@ body.page-tools-and-publications-publications{
 					margin-top: 0em;
 				    margin-bottom: 1em;
 				    margin-left: 1em;
+
 				}
 			}
 		}
@@ -7746,6 +7752,8 @@ body.page-tools-and-publications-publications{
 				}
 				a.more-link{
 					justify-content: left;
+					font-size: 1.2rem;
+    				padding-top: 5px;
 				}
 			}
 		}
