--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7836,7 +7836,7 @@ body.page-tools-and-publications-practical-tools{
 		.view-content{
 			.views-row{
 				.views-field-body{
-					padding-bottom: 35px;
+					padding-bottom: 85px;
 				}
 			}
 		}
@@ -7905,9 +7905,23 @@ body.page-tools-and-publications-practical-tools{
 			.views-row{
 
 				.views-field-title-field{
+					.field-content{
+						display: block;
+						width: 100%;
+					}
 					a{
 						padding-bottom: 10px;
 					}
+				}
+
+				.conten-tags{
+					float: left;
+					margin-right: 3em;
+					padding-bottom: 5px;
+				}
+
+				.conten-tags.last{
+					margin-right: 0;
 				}
 
 				span.views-label{
@@ -7918,7 +7932,6 @@ body.page-tools-and-publications-practical-tools{
 					border-radius: 5px;
 					padding: 2px 10px;
 					margin-right: 8px;
-					margin-left: 3em;
 				}
 
 				span.views-label.first{
@@ -7927,6 +7940,12 @@ body.page-tools-and-publications-practical-tools{
 
 				.views-field-body{
 					padding-top: 15px;
+					clear: both;
+				}
+
+				span{
+					display: block;
+					float: left;
 				}
 
 			}
