--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8384,3 +8384,57 @@ body.page-tools-and-publications-practical-tools{
     	opacity: 0.8;
     }
 }
+
+/* Video */
+
+body.video-page{
+	
+	.col-md-9{
+		padding-right: 5em;
+	}
+
+	.col-md-3{
+		padding: 0;
+	}
+
+	.field-name-body{
+		iframe{
+			width: 100%;
+		}
+	}
+
+	#block-hwc-article-recommended-resources{
+		margin-top: 1em;
+		span.recommended-resources-title{
+			line-height: 1.42857143;
+			font-family: 'Open Sans';
+			box-sizing: border-box;
+			border-radius: 0px;
+			color: #003399;
+			font-size: 1.6em;
+			display: block;
+			clear: both;
+		}
+		.content{
+		    margin-top: 1em;
+		}
+
+		.field-name-field-recommended-resources {
+			.field-items {
+				> .field-item{
+					border-bottom: 0;
+					padding-bottom: 0!important;
+				}
+			}
+		}
+
+		.field-name-title-field{
+			div{
+				div{
+					margin: 0;
+				}
+			}
+		}
+	}
+
+}
