--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -7889,6 +7889,9 @@ ul.tabs--primary.nav.nav-tabs > li.active > a:focus {
   border-right-color: #749b00;
   border-style: dotted;
 }
+ul.tabs--primary.nav.nav-tabs > li > a {
+  padding: 10px 8px;
+}
 .pane-node-field-publication-type .field-name-field-activity,
 .pane-node-field-publication-type .field-type-taxonomy-term-reference {
   display: block;
@@ -17378,6 +17381,13 @@ span.date-display-single {
   font-size: 0.89em;
   display: inline-block;
   font-style: normal;
+  background: #003399;
+}
+#block-hwc-partner-hwc-partner-mostra-masquerade a:hover {
+  opacity: 0.8;
+}
+#block-hwc-partner-hwc-partner-mostra-masquerade .contextual-links-trigger {
+  background: transparent;
 }
 #block-hwc-partner-hwc-partner-mostra-masquerade a::before {
   content: ">";
