--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -105,6 +105,10 @@ ul.tabs--primary.nav.nav-tabs{
 		border-right-color: @color3;
 		border-style: dotted;
 	}
+
+	> li > a{
+		padding: 10px 8px;
+	}
 }
 
 .pane-node-field-publication-type{	
@@ -8176,11 +8180,20 @@ span.date-display-single{
 
 /*Modal partner*/
 
-#block-hwc-partner-hwc-partner-mostra-masquerade a{
-	font-weight: bold;
-	font-size: 0.89em;
-	display:inline-block;
-	font-style: normal;
+#block-hwc-partner-hwc-partner-mostra-masquerade{
+	a{
+		font-weight: bold;
+		font-size: 0.89em;
+		display:inline-block;
+		font-style: normal;
+		background: #003399;
+		&:hover{
+			opacity: 0.8;
+		}
+	}
+	.contextual-links-trigger{
+		background: transparent;
+	}
 }
 
 #block-hwc-partner-hwc-partner-mostra-masquerade a::before{
