--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -160,9 +160,8 @@
 			}
 		}
 		.pager-total{
-			top: -1em;
-  		right: 5em;
-  	}
+	  		right: 5em;
+	  	}
 	}
 
 	#block-hwc-campaign-resources{
@@ -216,6 +215,18 @@
 			}
 		} 
 	}
+
+	/* Get your certificate */
+	.page-get-involved-get-your-certificate{
+		.pane-node-body{
+			width: 55%;
+		}
+
+		form.webform-client-form .form-select{
+			height: 34px;
+    		width: 100%;
+		}
+	} 
 
 }
 
