--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8396,6 +8396,10 @@ body.page-tools-and-publications-practical-tools{
     }
 }
 
+.contentPop{
+	padding-right: 15px;
+}
+
 /* Video */
 
 body.video-page{
