--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -13,6 +13,16 @@
 				background: transparent;
 			}
 		}
+
+		#block-hwc-homepage-hwc-homepage-newsletter-social{
+			.social-media{
+				a:before{
+		   			filter: brightness(0) invert(1);
+		   			-webkit-filter: brightness(0) invert(1);
+   				}
+			}
+		}
+		
 	}
 
 	.start-browsing .start-browsing-box{
@@ -117,7 +127,35 @@
 		.group-faq{
 			width: 100%;
 		}
+
+		.main-container{
+			ol.multicarousel-indicators{
+				padding-left: 0;
+			}
+		}
 	} 
+
+
+	/* Publications */
+	.page-publications{
+		#edit-exposed-widgets{
+			.views-exposed-widget{
+				select{
+					height: 33px;
+				} 
+			}
+		}
+	}
+	
+	.page-tools-and-publications{
+		#edit-exposed-widgets{
+			.views-exposed-widget{
+				select{
+					height: 33px;
+				} 
+			}
+		}
+	}
 
 }
 
@@ -1005,6 +1043,13 @@
 
 	.pager-total{
 		display: none;
+	}
+
+	/* Get your certificate */
+	.page-get-involved-get-your-certificate{
+		.pane-node-body{
+			width: 100%;
+		}
 	}
 
 }
