--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -228,6 +228,17 @@
 		}
 	} 
 
+	body.page-tools-and-publications-practical-tools {
+		.view-practical-tools {
+			.view-filters{
+				.views-exposed-widget{
+					width: 31.1%!important;
+				}
+			}
+		}
+	}
+
+
 }
 
 
