--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -1052,6 +1052,29 @@
 		}
 	}
 
+	body.page-tools-and-publications-practical-tools {
+		.view-practical-tools {
+			.view-filters {
+				.views-exposed-widget{
+					width: 100%!important;
+				}
+
+				#edit-search-api-views-fulltext{
+					margin-top: 0;
+    				margin-bottom: 2em;
+				}
+
+				.views-widget-sort-by{
+					margin-top: 1em;
+				}
+
+				.form-select{
+					max-height: 62px;
+				}
+			}
+		}
+	}
+
 }
 
 
