--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -1739,14 +1739,13 @@ ul.tabs--primary.nav.nav-tabs{
 				}
 			}
 			#block-osha-search-osha-search-clear-filters{
+				clear: both;
 				h3{
 					display: none;
 				}
 				a{
-					font-weight: bold;
-					//border-bottom: 1px dotted @color3;
 					display: block;
-					padding-bottom: 5px;
+					padding-top: 1em;
 					margin-top: 5px;
 				}
 				.clear-wrapper{
