--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-min-1200.less
@@ -57,7 +57,7 @@
 		.view-content{
 			.gallery-row{
 				.views-field-field-flickr{
-					height: 200px;
+					height: 200px !important;
 					overflow: hidden;
 					img{
 						min-height: auto;
