--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -2854,7 +2854,7 @@ span.pages{
 	.publications-row{
 		border-bottom:0;
 		margin-top: 2em;
-    	padding: 0;
+    	padding: 0 2em 0 0;
 		.download{
 			margin-top: 2em;
 			float: left;
@@ -3192,6 +3192,11 @@ body.good-practice-exchange{
 }
 
 .page-search{
+
+	.region-sidebar-first .block.block-facetapi:first-child {
+	    margin-top: 63px!important;
+	}
+
 	.views-row img{
 		border: 0;
 	}
@@ -6059,6 +6064,10 @@ body.european-week{
 	background-color: transparent;
 }
 
+.pager .active > a:hover{
+	color: #747f94;
+}
+
 .pagination li.pager-current, .pager li.pager-current{
 	color: #003399;
 	font-size: 1.1em;
@@ -6112,6 +6121,12 @@ body.european-week{
 	height: 30px;
 	float: left;
 	text-indent: -99999px;
+}
+
+.pager-first, .pager-previous, .pager-next, .pager-last{
+	a:hover{
+		opacity: 0.8;
+	}
 }
 
 
@@ -8448,3 +8463,30 @@ body.video-page{
 	}
 
 }
+
+
+/* Filters */
+
+
+.clear_filters{
+	padding-bottom: 1em;
+}
+
+#remove_filter{
+	a{
+		padding-right: 1em;
+    	padding-bottom: 1em;
+    	display: block;
+    	float: left;
+		.glyphicon-remove{
+			padding-right: 5px;
+		}
+
+		&:hover{
+			.glyphicon-remove{
+				opacity: 0.8;
+			}
+		}
+	}	
+}
+
