--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3194,7 +3194,7 @@ body.good-practice-exchange{
 .page-search{
 
 	.region-sidebar-first .block.block-facetapi:first-child {
-	    margin-top: 63px!important;
+	    margin-top: 41px!important;
 	}
 
 	.views-row img{
@@ -3221,7 +3221,7 @@ body.good-practice-exchange{
 	}
 
 	.views-exposed-widgets{
-		margin-bottom: 2em;
+		margin-bottom: 1em;
 		input{
 			height: 35px;
 			border-radius: 5px !important;
@@ -8363,8 +8363,11 @@ body.page-tools-and-publications-practical-tools{
 		    padding-left: 0;
 		    a{
 			   color: #59595A;
-			   padding-left: 5px;
 			}
+		}
+
+		input[type="radio"], input[type="checkbox"]{
+			margin-right: 5px;
 		}
 
 		#facetapi-facet-search-apidefault-multilingual-node-index-block-field-priority-area{
