--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1422,6 +1422,11 @@ aside.col-md-3 .region.region-sidebar-first.well .block-menu-block.left-menu h2.
   padding-left: 1em;
   padding-right: 30px;
   position: relative;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+aside.col-md-3 .region.region-sidebar-first.well .block-menu-block.left-menu h2.block-title a {
+  color: #FFF;
 }
 .left-menu ul {
   list-style: none;
@@ -1445,17 +1450,18 @@ aside.col-md-3 .region.region-sidebar-first.well .block-menu-block.left-menu h2.
 }
 .left-menu ul li:hover a {
   color: #FFFFFF;
+  background: transparent;
 }
 .left-menu ul li ul li:hover a {
   color: white;
   background-color: #0030a0;
 }
 .left-menu ul .active {
-  background-color: #0030a0;
+  background-color: #daea96;
   position: relative;
 }
 .left-menu ul .active a {
-  color: white;
+  color: #003399;
   display: block;
   width: 100%;
 }
@@ -1464,7 +1470,7 @@ aside.col-md-3 .region.region-sidebar-first.well .block-menu-block.left-menu h2.
   width: 15px;
   height: 15px;
   border-radius: 10px;
-  background: #acc700;
+  background: #0030a0;
   position: absolute;
   right: 0;
   top: 10%;
@@ -2083,6 +2089,9 @@ span.title-select {
 }
 .content-order-copy a:hover img {
   opacity: 0.8;
+}
+.content-order-copy {
+  display: none;
 }
 div.publications-detail-right-column > a.download {
   margin-left: 3em;
@@ -2966,7 +2975,7 @@ div.workbench-info-block {
   width: 15px;
   height: 15px;
   border-radius: 10px;
-  background: #acc700;
+  background: #003399;
   position: absolute;
   right: 15px;
   top: 28%;
