--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -16065,7 +16065,8 @@ html:lang(mt) .get-involved-section .information-tailored .images-section .image
 .page-get-your-certificate form.webform-client-form .form-select {
   position: relative;
   display: inline-block;
-  width: 95%;
+  width: 100%;
+  height: 35px;
   border: 1px solid #003399 !important;
   box-shadow: none;
 }
@@ -20312,7 +20313,7 @@ blockquote.image-field-caption {
   width: 100%;
   font-size: 10px;
   position: absolute;
-  top: -5px;
+  top: -20px;
 }
 blockquote.image-field-caption p {
   z-index: 999;
@@ -20323,6 +20324,12 @@ blockquote.image-field-caption p {
   font-size: 10px;
   color: #000;
   float: left;
+}
+blockquote.image-field-caption span {
+  height: 28px;
+  display: flex;
+  align-items: flex-end;
+  width: 240px;
 }
 .view-publication-type .views-row:hover .views-field-field-image a {
   text-decoration: none;
