--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -7431,7 +7431,8 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 		.form-select {
 			position: relative;
 			display: inline-block;
-			width: 95%;
+			width: 100%;
+			height: 35px;
 			border: 1px solid @bg-color-2 !important;
 			box-shadow: none;
 			&:after {
@@ -11354,7 +11355,7 @@ blockquote.image-field-caption {
     width: 100%;
     font-size: 10px;
     position: absolute;
-    top: -5px;
+    top: -20px;
     p{
 	  	z-index: 999;
 	    position: relative;
@@ -11364,6 +11365,13 @@ blockquote.image-field-caption {
 	    font-size: 10px;
 	    color: #000;
 	    float: left;
+    }
+
+    span{
+    	height: 28px;
+	    display: flex;
+	    align-items: flex-end;
+	    width: 240px;
     }
 }
 
