--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1621,6 +1621,11 @@ aside.col-md-3{
 			    padding-left: 1em;
 			    padding-right: 30px;
 			    position: relative;
+			    margin-left: 0 !important;
+			    margin-right: 0 !important;
+			    a{
+			    	color: #FFF;
+			    }
 			}
 		}
 	}
@@ -1648,7 +1653,7 @@ aside.col-md-3{
 		background-color:#0030a0;	
 		a{
 			color: #FFFFFF;
-			
+			background: transparent;
 		}
 	}
 
@@ -1665,10 +1670,10 @@ aside.col-md-3{
 	}
 
 	.active{
-    background-color: #0030a0;
+    background-color: #daea96;
     position: relative;
     a{
-      color:white;
+      color: #003399;
       display: block;
       width: 100%;
       &:before{
@@ -1676,7 +1681,7 @@ aside.col-md-3{
 		width: 15px;
 		height: 15px;
 		border-radius: 10px;
-		background: #acc700;
+		background: #0030a0;
 		position: absolute;
 		right: 0;
 		top: 10%;
@@ -2377,6 +2382,10 @@ span.title-select{
 			}
 		}
 	}
+}
+
+.content-order-copy{
+	display: none;
 }
 
 div.publications-detail-right-column > a.download{
@@ -3412,7 +3421,7 @@ div.workbench-info-block{
     width: 15px;
     height: 15px;
     border-radius: 10px;
-    background: #acc700;
+    background: #003399;
     position: absolute;
     right: 15px;
     top: 28%;
