--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -610,7 +610,7 @@ ul.time-and-counters{
 					font-weight: bold;
 				}
 				.city, .country{
-					float: right;
+					float: left;
 					font-weight: bold;
 				}
 				.city{
@@ -7269,6 +7269,11 @@ body.front-page{
 								float: left;
 							    width: 100%;
 								.view-content{
+									.date{
+										display: inline-block;
+    									width: auto;
+									}
+
 									> div{
 										clear: both;
 									    border-bottom: 1px solid #CCC;
