HW20-243 - Events should display 2 dates

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -532,7 +532,7 @@ ul.time-and-counters li .counter-label {
 .before-the-campaign .content-box-before .two-box-column .content-date-country .city {
   padding-left: 5px;
 }
-.before-the-campaign .content-box-before .two-box-column .content-date-country .city:before {
+.before-the-campaign .content-box-before .two-box-column .content-date-country .country:after {
   content: ',';
   padding-right: 1px;
 }
