--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -615,11 +615,14 @@ ul.time-and-counters{
 				}
 				.city{
 			    	padding-left: 5px;
-			    	&:before{
+			    }
+			    .country{
+			    	&:after{
 			    		content:',';
 			    		padding-right: 1px;
 			    	}
 			    }
+			    
 			}
 
 			.content-event{
