--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -2509,6 +2509,9 @@ span.pages {
 .publication-detail .content-publication-info {
   padding-top: 0;
 }
+.node-type-campaign-materials .back-to-publications {
+  padding-left: 0;
+}
 /* Footer */
 .splash-page .footer {
   min-height: auto;
