--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -2894,6 +2894,13 @@ span.pages{
 }
 
 
+.node-type-campaign-materials{
+	.back-to-publications{
+		padding-left: 0;
+	}
+}
+
+
 /* Footer */
 
 .splash-page{
