--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -2509,6 +2509,9 @@ span.pages {
 .publication-detail .content-publication-info {
   padding-top: 0;
 }
+.publication-detail.campaign-materials {
+  clear: both;
+}
 .node-type-campaign-materials .back-to-publications {
   padding-left: 0;
 }
