--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -2893,6 +2893,16 @@ span.pages{
 	}
 }
 
+.publication-detail.campaign-materials{
+	clear: both;
+}
+
+.node-type-campaign-materials{
+	.back-to-publications{
+		padding-left: 0;
+	}
+}
+
 
 /* Footer */
 
