--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7777,6 +7777,7 @@ body.page-tools-and-publications-publications{
 		.block-hwc-priority-areas{
 			background: #eceaea;
 			float: left;
+			width: 100%;
     		.field-name-title-field{
     			div{
     				div{
