--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -8186,10 +8186,12 @@ span.date-display-single{
 		font-size: 0.89em;
 		display:inline-block;
 		font-style: normal;
-		background: #003399;
 		&:hover{
 			opacity: 0.8;
 		}
+	}
+	a.btn{
+		background: #003399;
 	}
 	.contextual-links-trigger{
 		background: transparent;
