--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7104,7 +7104,7 @@ body.front-page{
 		}
 
 		#block-hwc-homepage-hwc-homepage-news-events{
-			padding-bottom: 3em;
+			padding-bottom: 0;
 			.before-the-campaign{
 				background: transparent;
 				.content-box-before{
